[package]
name = "timechain-runtime"
description = "A blockchain using the proof of time consensus protocol"
version = "0.6.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
log.workspace = true

scale-codec = { workspace = true, features = [ "max-encoded-len" ] }
scale-info.workspace = true

static_assertions = "1.1.0"

polkadot-sdk = { workspace = true, features = [
	"frame-election-provider-support",
	"frame-executive",
	"frame-metadata-hash-extension",
	"frame-support",
	"frame-system",

	"pallet-authorship",
	"pallet-authority-discovery",
	"pallet-babe",
	"pallet-bags-list",
	"pallet-balances",
	"pallet-collective",
	"pallet-election-provider-multi-phase",
	"pallet-grandpa",
	"pallet-im-online",
	"pallet-offences",
	"pallet-session",
	"pallet-staking",
	"pallet-staking-reward-fn",
	"pallet-sudo",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-treasury",
	"pallet-utility",

	"sp-api",
	"sp-arithmetic",
	"sp-authority-discovery",
	"sp-block-builder",
	"sp-consensus-babe",
	"sp-core",
	"sp-genesis-builder",
	"sp-inherents",
	"sp-io",
	"sp-npos-elections",
	"sp-offchain",
	"sp-runtime",
	"sp-session",
	"sp-std",
	"sp-transaction-pool",
	"sp-version",
	"sp-staking",

	"frame-system-rpc-runtime-api",
	"pallet-transaction-payment-rpc-runtime-api",
]}

# Local Dependencies
pallet-elections = { path = "../pallets/elections", default-features = false }
pallet-members = { path = "../pallets/members", default-features = false }
pallet-networks = { path = "../pallets/networks", default-features = false }
pallet-shards = { path = "../pallets/shards", default-features = false }
pallet-tasks = { path = "../pallets/tasks", default-features = false }
pallet-timegraph = { path = "../pallets/timegraph", default-features = false }
runtime-common = { path = "./common", default-features = false }
time-primitives = { path = "../primitives", default-features = false }

[dev-dependencies]
separator = "0.4.1"

[build-dependencies]
#polkadot-sdk = { workspace = true, features = [ "substrate-wasm-builder" ] } 
substrate-wasm-builder = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", features = [ "metadata-hash" ]}

[features]
default = [ "std" ]
std = [
	"log/std",
	"scale-codec/std",
	"polkadot-sdk/std",

	"pallet-elections/std",
	"pallet-members/std",
	"pallet-networks/std",
	"pallet-shards/std",
	"pallet-tasks/std",
	"pallet-timegraph/std",
	"runtime-common/std",
	"time-primitives/std",
]
runtime-benchmarks = [
	"polkadot-sdk/frame-system-benchmarking",
	"polkadot-sdk/runtime-benchmarks",

	"pallet-elections/runtime-benchmarks",
	"pallet-members/runtime-benchmarks",
	"pallet-networks/runtime-benchmarks",
	"pallet-shards/runtime-benchmarks",
	"pallet-tasks/runtime-benchmarks",
	"pallet-timegraph/runtime-benchmarks",
	"runtime-common/runtime-benchmarks",
]
try-runtime = [
	"polkadot-sdk/frame-try-runtime",
	"polkadot-sdk/try-runtime",

	"pallet-elections/try-runtime",
	"pallet-members/try-runtime",
	"pallet-networks/try-runtime",
	"pallet-shards/try-runtime",
	"pallet-tasks/try-runtime",
	"pallet-timegraph/try-runtime",
]
fast-runtime = [
	"runtime-common/fast-runtime"
]
