[package]
name = "timechain-runtime"
description = "Official Analog Timechain Mainnet Runtime"
build = "build.rs"
license = "Apache-2.0"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
env_logger.workspace = true
separator = "0.4.1"

[dependencies]
log = { workspace = true }

hex-literal = "0.4.1"
smallvec = "1.8.0"

scale-codec = { workspace = true, features = [ "max-encoded-len" ] }
scale-info = { workspace = true, features = [ "serde" ] }
serde_json = { workspace = true, features = ["alloc", "arbitrary_precision"] }

static_assertions = "1.1.0"

primitive-types = { version = "0.13.1", default-features = false, features = ["codec", "scale-info"] }

polkadot-sdk = { workspace = true, features = [
	"frame-election-provider-support",
	"frame-executive",
	"frame-metadata-hash-extension",
	"frame-support",
	"frame-system",
	"frame-system-rpc-runtime-api",

	"pallet-authority-discovery",
	"pallet-authorship",
	"pallet-babe",
	"pallet-bags-list",
	"pallet-balances",
	"pallet-bounties",
	"pallet-child-bounties",
	"pallet-collective",
	"pallet-election-provider-multi-phase",
	"pallet-delegated-staking",
	"pallet-grandpa",
	"pallet-identity",
	"pallet-im-online",
	"pallet-membership",
	"pallet-multisig",
	"pallet-nomination-pools",
	"pallet-offences",
	"pallet-preimage",
	"pallet-proxy",
	"pallet-ranked-collective",
	"pallet-referenda",
	"pallet-scheduler",
	"pallet-session",
	"pallet-staking",
	"pallet-staking-reward-curve",
	"pallet-staking-runtime-api",
	"pallet-timestamp",
	"pallet-tips",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",
	"pallet-treasury",
	"pallet-utility",
	"pallet-vesting",
	"pallet-safe-mode",
	"pallet-sudo",

	"sp-api",
	"sp-block-builder",
	"sp-authority-discovery",
	"sp-consensus-babe",
	"sp-consensus-grandpa",
	"sp-core",
	"sp-inherents",
	"sp-io",
	"sp-metadata-ir",
	"sp-offchain",
	"sp-runtime",
	"sp-session",
	"sp-staking",
	"sp-std",
	"sp-storage",
	"sp-transaction-pool",
	"sp-version",
	"sp-weights",
]}

# Custom local pallets
pallet-airdrop.workspace = true
pallet-assets-bridge.workspace = true
pallet-dmail.workspace = true
pallet-elections.workspace = true
pallet-governance.workspace = true
pallet-launch.workspace = true
pallet-members.workspace = true
pallet-networks.workspace = true
pallet-shards.workspace = true
pallet-tasks.workspace = true
pallet-timegraph.workspace = true
pallet-validators.workspace = true

# shared code between runtimes and/or node
time-primitives.workspace = true

# HASHI Bridge
eth-bridge.workspace = true
eth-bridge-runtime-api.workspace = true
bridge-multisig.workspace = true

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = [ "std" ]
testnet = [ "time-primitives/testnet" ]
develop = [
  "testnet",
  "genesis-builder",
  "time-primitives/develop",
]
with-tracing = [ "polkadot-sdk/with-tracing" ]
std = [
	"log/std",
	"scale-codec/std",
	"scale-info/std",
	"serde_json/std",
	"primitive-types/std",
	"polkadot-sdk/std",

	"pallet-airdrop/std",
	"pallet-assets-bridge/std",
	"pallet-dmail/std",
	"pallet-elections/std",
	"pallet-governance/std",
	"pallet-launch/std",
	"pallet-members/std",
	"pallet-networks/std",
	"pallet-shards/std",
	"pallet-tasks/std",
	"pallet-timegraph/std",
	"pallet-validators/std",

	"time-primitives/std",

	"substrate-wasm-builder",

	"eth-bridge/std",
	"eth-bridge-runtime-api/std",
	"bridge-multisig/std",
]
genesis-builder = [ "polkadot-sdk/sp-genesis-builder" ]
runtime-benchmarks = [
	"genesis-builder",
	"polkadot-sdk/runtime-benchmarks",
	"polkadot-sdk/frame-benchmarking",
	"polkadot-sdk/frame-system-benchmarking",
	"polkadot-sdk/pallet-election-provider-support-benchmarking",
	"polkadot-sdk/pallet-nomination-pools-benchmarking",
	"polkadot-sdk/pallet-offences-benchmarking",
	"polkadot-sdk/pallet-session-benchmarking",

	"pallet-airdrop/runtime-benchmarks",
	"pallet-assets-bridge/runtime-benchmarks",
	"pallet-dmail/runtime-benchmarks",
	"pallet-elections/runtime-benchmarks",
	"pallet-governance/runtime-benchmarks",
	"pallet-launch/runtime-benchmarks",
	"pallet-members/runtime-benchmarks",
	"pallet-networks/runtime-benchmarks",
	"pallet-shards/runtime-benchmarks",
	"pallet-tasks/runtime-benchmarks",
	"pallet-timegraph/runtime-benchmarks",
	"pallet-validators/runtime-benchmarks",

	"eth-bridge/runtime-benchmarks",
	"bridge-multisig/runtime-benchmarks",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
	"polkadot-sdk/frame-try-runtime",

	"pallet-airdrop/try-runtime",
	"pallet-assets-bridge/try-runtime",
	"pallet-dmail/try-runtime",
	"pallet-elections/try-runtime",
	"pallet-governance/try-runtime",
	"pallet-launch/try-runtime",
	"pallet-members/try-runtime",
	"pallet-networks/try-runtime",
	"pallet-shards/try-runtime",
	"pallet-tasks/try-runtime",
	"pallet-timegraph/try-runtime",
	"pallet-validators/try-runtime",

	"eth-bridge/try-runtime",
	"bridge-multisig/try-runtime",
]
