[package]
name = "slack-bot"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.1", features = ["macros"] }
axum-github-webhook-extract = { version = "0.2.0", git = "https://github.com/daaku/axum-github-webhook-extract" }
dotenv = "0.15.0"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.138"
slack-morphism = { version = "2.9.0", features = ["axum", "hyper"] }
tokio = { workspace = true, features = [ "macros", "rt-multi-thread", "signal" ]}
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
