[package]
name = "tc-cli"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
csv = "1.3.0"
dotenv = "0.15.0"
futures.workspace = true
gmp.workspace = true
hex.workspace = true
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9.34"
surf = { version = "2.3.2", default-features = false, features = [ "h1-client-rustls" ] }
tabled = "0.16.0"
tc-subxt.workspace = true
scale-codec.workspace = true
polkadot-sdk = { workspace = true, features = ["sp-runtime"]}
time-primitives = { workspace = true, default-features = true }
tokio = { workspace = true, features = [ "macros", "rt-multi-thread", "signal" ]}
tracing.workspace = true
tracing-subscriber = "0.3.18"
