[package]
name = "tc-subxt"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
hex.workspace = true
polkadot-sdk = { workspace = true, features = [
	"sp-runtime",
]}
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
tracing.workspace = true

scale-codec.workspace = true
scale-decode.workspace = true
scale-info.workspace = true

subxt = { version = "0.37.0", features = ["unstable-reconnecting-rpc-client"] }
subxt-signer = { version = "0.37.0", features = ["subxt"]}

time-primitives = { workspace = true, default-features = true }
tc-subxt-metadata = { path = "metadata" }

[features]
testnet = [ "tc-subxt-metadata/testnet" ]
develop = [ "tc-subxt-metadata/develop" ]
