[package]
name = "tc-subxt"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
tracing.workspace = true

scale-codec.workspace = true
scale-decode.workspace = true
scale-info.workspace = true

subxt = { workspace = true, features = ["reconnecting-rpc-client"] }
subxt-signer.workspace = true

time-primitives = { workspace = true, default-features = true }
tc-subxt-metadata = { path = "metadata" }

[features]
testnet = [
  "time-primitives/testnet",
  "tc-subxt-metadata/testnet"
]
develop = [
  "testnet",
  "time-primitives/develop",
  "tc-subxt-metadata/develop"
]
bridge-demo = [
  "develop",
  "tc-subxt-metadata/bridge-demo",
]
