[package]
name = "tc-subxt"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
hex.workspace = true
redb = "2.1.2"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

scale-codec.workspace = true
scale-decode.workspace = true
scale-info.workspace = true

subxt = { workspace = true, features = ["reconnecting-rpc-client"] }
subxt-signer.workspace = true

time-primitives = { workspace = true, default-features = true }
tc-subxt-metadata = { path = "metadata" }

[dev-dependencies]
env_logger.workspace = true
tokio-stream = { version = "0.1", features = ["sync"]}


[features]
testnet = [
  "time-primitives/testnet",
  "tc-subxt-metadata/testnet"
]
develop = [
  "time-primitives/develop",
  "tc-subxt-metadata/develop"
]
