[package]
name = "tester"
version = "0.1.0"
description = "Utility tool for executing commands on the Timechain and gateway contracts"
readme = "tester/README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [ "macros", "rt-multi-thread", "signal" ]}

rosetta-client.workspace = true
rosetta-config-ethereum.workspace = true

alloy-primitives = { version = "0.6.4", features = ["std", "rlp"] }
alloy-sol-types = { version = "0.6.4" }
ethers-solc = "2.0.1"
getrandom = "0.2.12"
tabled = "0.15.0"
schnorr-evm = "0.1.2"
sha3 = "0.10.8"
surf = { version = "2.3.2", default-features = false, features = [ "h1-client-rustls" ] }
sysinfo = "0.30.10"
tracing-subscriber = "0.3.18"
num-bigint = "0.4.6"
num-traits = "0.2.19"
num-integer = "0.1.46"


tc-subxt.workspace = true
time-primitives = { workspace = true, default-features = true }

[features]
default = []
