[package]
name = "tss"
version = "0.0.1"
license = "Apache-2.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.75"
frost-evm = { version = "0.1.1", features = ["serde"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.188", features = [ "derive" ] }
tracing = "0.1.37"

[dev-dependencies]
env_logger = "0.10.0"
