[package]
name = "tss"
version = "0.0.1"
license = "Apache-2.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true

frost-evm = { version = "0.1.1", features = ["serde"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

[dev-dependencies]
env_logger.workspace = true
