[package]
name = "gmp-evm"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives = { version = "0.8.0", features = ["rlp"] }
alloy-sol-types = "0.8.5"
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
hex.workspace = true
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rosetta-client = { git = "https://github.com/analog-labs/chain-connectors", branch = "gmp-api" }
rosetta-crypto = { git = "https://github.com/analog-labs/chain-connectors", branch = "gmp-api" }
rosetta-server = { git = "https://github.com/analog-labs/chain-connectors", branch = "gmp-api" }
rosetta-server-ethereum = { git = "https://github.com/analog-labs/chain-connectors", branch  = "gmp-api" }
rosetta-ethereum-backend = { git = "https://github.com/analog-labs/chain-connectors", branch = "gmp-api" }
rosetta-ethereum-types = { git = "https://github.com/analog-labs/chain-connectors", branch = "gmp-api" }
sha3 = { version = "0.10", default-features = false }
serde.workspace = true
serde_json = "1.0.127"
time-primitives = { workspace = true, default-features = true }
tokio.workspace = true
tracing.workspace = true
