[package]
name = "gmp-grpc"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bincode = "1.3.3"
bytes = "1.7.2"
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
gmp-rust = { path = "../rust" }
prost = "0.13.3"
serde = { workspace = true, features = ["derive"] }
serde-big-array = "0.5.1"
time-primitives = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "signal"] }
tonic = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"
