[package]
name = "gmp-rust"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-trait.workspace = true
bincode = "1.3.3"
blake3 = "1.5.4"
futures.workspace = true
getrandom = { version = "0.2.15", features = ["std"] }
hex.workspace = true
redb = "2.1.2"
serde.workspace = true
tempfile = "3.12.0"
time-primitives = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
