[package]
name = "pallet-assets-bridge"
description = "A pallet that bridges assets"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
log.workspace = true
scale-codec.workspace = true
scale-info.workspace = true
simple-mermaid.workspace = true

polkadot-sdk = { workspace = true, features = [
	"frame-support",
	"frame-system",
	"sp-core",
	"sp-runtime",
	"sp-std",

	"pallet-balances",

]}


time-primitives.workspace = true

[dev-dependencies]
env_logger.workspace = true
lazy_static = "1.4.0"
pallet-tasks.workspace = true

polkadot-sdk = { workspace = true, features = [
	 "sp-io",
	 "sp-keystore",

	 "pallet-treasury",
]}

[features]
default = [ "std" ]
std = [
	"scale-codec/std",
	"scale-info/std",

	"polkadot-sdk/std",

	"time-primitives/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"polkadot-sdk/frame-benchmarking",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
]
