[package]
name = "pallet-dmail"
description = "A pallet for dmail integration."
publish = false
readme = "pallets/dmail/README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scale-codec.workspace = true
scale-info.workspace = true
polkadot-sdk = { workspace = true, features = [ "frame-support", "frame-system", "sp-runtime" ]}
time-primitives.workspace = true

[dev-dependencies]
polkadot-sdk = { workspace = true, features = [ "pallet-balances", "sp-core", "sp-io" ] }

[features]
default = [ "std" ]
std = [
	"scale-codec/std",
	"scale-info/std",
	"polkadot-sdk/std",
	"time-primitives/std"
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"polkadot-sdk/frame-benchmarking",
]
try-runtime = [
	"polkadot-sdk/try-runtime"
]
