[package]
name = "pallet-elections"
version = "0.0.1"
description = "A pallet for selecting members for shards."
publish = false

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false, optional = true }
frame-support = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
frame-system = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = [ "derive" ] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false, optional = true }
sp-runtime = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
sp-std = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
time-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
env_logger = "0.10.0"
lazy_static = "1.4.0"
pallet-balances = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched" }
pallet-shards = { path = "../shards" }
sp-io = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }
sp-keystore = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.13.0-patched", default-features = false }

[features]
default = [ "std" ]
std = [ "codec/std", "frame-benchmarking?/std", "frame-support/std", "frame-system/std", "scale-info/std", "serde/std", "sp-core/std", "sp-runtime/std", "sp-std/std", "time-primitives/std" ]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks", "sp-core" ]
try-runtime = [ "frame-support/try-runtime" ]
